Fix alignement

--- a/app/static/stylesheets/style.css
+++ b/app/static/stylesheets/style.css
@@ -1,5 +1,6 @@
 body{
     padding:0px;
+    margin:0px;
 }
 
 #heading {
@@ -12,25 +13,36 @@ body{
 }
 
 .column-4 {
-    background: white;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: normal;
+    margin-bottom: 20px;
+    width: 33.333%;
+    display: inline-block;
+    vertical-align: top;
+    float: left;
+}
+
+
+.tweet-text{
+    min-height:60px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: normal;
+}
+
+.twitter-tweet {
+    margin: 10px 15px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: normal;
     box-shadow: 2px 1px 3px 1px rgba(0, 0, 0, 0.15);
-    margin-bottom: 20px;
-    width: 32%;
+    padding: 10px 15px;
+}
+
+.twitter-logo{
+    font-size: 18px;
+    font-weight: 600;
     display: inline-block;
-    vertical-align: top;
-    margin-right: 1%;
-}
-
-.tweet-text{
-    min-height:55px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-style: normal;
-}
-
-.twitter-tweet{
-    margin: 10px 15px;
+    margin-bottom: 0px;
+    margin-right: 10px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: normal;
 }
@@ -67,13 +79,33 @@ body{
 }
 
 h1{
-    margin-left: 25px;
+    margin-left: auto;
     margin-right: auto;
+    text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: normal;
 }
 
-@media screen and (max-width : 480px ) {
+a:link {
+    color: black;
+}
+
+/* visited link */
+a:visited {
+    color: black;
+}
+
+/* mouse over link */
+a:hover {
+    color: #00aced;
+}
+
+/* selected link */
+a:active {
+    color: #00aced;
+}
+
+@media screen and (max-width : 600px ) {
     .column-4{
         width: 94%;
         margin-left: 3%;
